# conan-cci-build

./: .conanignore  .pylintrc  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: publish.yaml  publish.yml  pylint.yml
extensions/commands/: cmd_cci_build.py
src/cci_build/: conan_centre_index.py  conan_client.py  conan_util.py  installer.py  main.py  package_parser.py  profile_matcher.py  workflow.py
src/cci_build/error/: exception.py
src/cci_build/model/: context.py  package_request.py
src/cci_build/model/cci/conandata/: types.py
src/cci_build/model/cci/config/: types.py
src/cci_build/model/settings/: types.py
src/cci_build/template/: profile_node.py  profile_proxy.py  render.py
test/micro/: test_cci_package.py  test_package_template.py  test_parse_package_list.py  test_profile_matcher.py
test/micro/resources/: __init__.py
test/micro/resources/cci/recipes/sample/: config.yml
test/micro/resources/cci/recipes/sample/1.0.0/: conandata.yml
test/micro/resources/cci/recipes/sample/all/: conandata.yml
